--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,43 @@ footer{
 	background-color:gray;
 	display:flex;
 	align-content:center;
+	justify-content:center;
 }
 footer p{
 	margin-left:5px;
 	margin-right:5px;
+	align-items:center;
+	display:flex;
 }
 body>div{
-	width:100%;
-	height:90vh;
+	width:calc(100% - 40px);
+	height:calc(90vh - 20px);
 	background-color:gainsboro;
 }
 body{
 	margin:0px;
+}
+#main{
+	padding:10px 20px;
+	color:red;
+	display:flex;
+	align-content:center;
+	justify-content:center;
+}
+#gamespace{
+	margin:0px;
+	border:2px solid black;
+	padding:0px;
+	width:42px;
+	height:42px;
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:space-between;
+	align-content:space-between;
+	background-color:#1051ba;
+}
+#gamespace>div{
+	background-color:yellow;
+	width:20px;
+	height:20px;
 }
