--- a/styles.css
+++ b/styles.css
@@ -24,23 +24,28 @@ body{
 	padding:10px 20px;
 	color:red;
 	display:flex;
-	align-content:center;
+	align-items:center;
 	justify-content:center;
 }
 #gamespace{
 	margin:0px;
 	border:2px solid black;
 	padding:0px;
-	width:42px;
-	height:42px;
+	/*width = 21*cols */
+	width:calc(22px*30);
+	min-width:calc(22px*30);
+	/*height = 21*rows */
+	height:calc(22px*20);
+	min-height:calc(22px*20);
 	display:flex;
 	flex-wrap:wrap;
-	justify-content:space-between;
-	align-content:space-between;
+	/*justify-content:space-between;
+	align-content:space-between;*/
 	background-color:#1051ba;
 }
 #gamespace>div{
 	background-color:yellow;
 	width:20px;
 	height:20px;
+	margin:1px;
 }
