--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ footer p{
 	margin-right:5px;
 	align-items:center;
 	display:flex;
+    font-family:Arial, Helvetica, sans-serif;
 }
 body>div{
 	width:calc(100% - 40px);
@@ -20,12 +21,22 @@ body>div{
 body{
 	margin:0px;
 }
+#scorediv{
+    padding-top:10px;
+}
+#score{
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:large;
+    margin-top:10px;
+    color:black;
+}
 #main{
 	padding:10px 20px;
 	color:red;
 	display:flex;
 	align-items:center;
 	justify-content:center;
+    flex-direction:column;
 }
 #gamespace{
 	margin:0px;
@@ -44,7 +55,7 @@ body{
 	background-color:#1051ba;
 }
 #gamespace>div{
-	background-color:yellow;
+	/*background-color:yellow;*/
 	width:20px;
 	height:20px;
 	margin:1px;
